--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -2,4 +2,5 @@
   width: 96%;
   max-width: 720px;
   margin: 40px auto 0;
+  padding: 10px;
 }
